[package]
name = "lib"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "viper"
crate-type = ["cdylib"]

[dependencies]
env_logger = "0.11.10"
futures = "0.3.32"
indicatif = "0.18.4"
log = "0.4.29"
pyo3 = { version = "0.28", features = ["extension-module", "experimental-async"] }
pyo3-async-runtimes = { version = "0.28", features = ["tokio-runtime"] }
reqwest = { version = "0.13.2", default-features = false, features = ["json", "rustls", "hickory-dns"] }
tokio = "1.50.0"
serde-query = "0.2.0"
serde_json = "1.0"